<resources>
    <string name="app_name">android-card-fidelize</string>
    <string name="login">Login</string>
    <string name="hint_login">Digite seu login</string>
    <string name="hint_password">Digite sua senha</string>
    <string name="login_enter">Entrar</string>
    <string name="login_forgot_password">Esqueceu sua senha?\n clique aqui </string>
    <string name="login_authentication_biometric">Ou use a biometria</string>
    <string name="login_register_text">Não possui uma conta? <b><font color="#2196F3">Cadastre-se</font></b></string>
    <string name="text_chose_type_register">Selecione o tipo de conta que deseja criar:</string>
    <string name="next">Próximo</string>
    <string name="cancel">Cancelar</string>
    <string name="example_email">Ex: teste@teste.com</string>
    <string name="register_user_email">Preencha seu <b><font color="#2196F3">e-mail</font></b>:</string>
    <string name="register_user_name">Preencha com seu <b><font color="#2196F3">nome</font></b>:</string>
    <string name="register_company_name">Preencha com o <b><font color="#2196F3">nome</font></b> da sua <b><font color="#2196F3">empresa</font></b>:</string>
    <string name="register_cnpj_company_name">Preencha com o <b><font color="#2196F3">CNPJ</font></b> da sua <b><font color="#2196F3">empresa</font></b>:</string>
    <string name="company">Empresa</string>
    <string name="client">Cliente</string>
    <string name="register_user_password">Crie uma <b><font color="#2196F3">senha</font></b>:</string>
    <string name="min_4_characteres">Mínimo de 6 caracteres</string>
    <string name="back">Voltar</string>
    <string name="register_user_confirm_password">Confirme sua <b><font color="#2196F3">senha</font></b>:</string>
    <string name="example_password">******</string>
    <string name="example_name">Ex: João</string>
    <string name="example_company_name">Ex: Padaria do João</string>
    <string name="example_cnpj_name">Ex: 12345678900001</string>
    <string name="conclude">Concluir</string>
    <string name="register_user_confirm_email">Enviamos para o seu <b><font color="#2196F3">e-mail</font></b>, as instruções para <b><font color="#2196F3">validar a sua conta</font></b></string>
    <string name="example_code">123456</string>
    <string name="register_user_confirmed_email">Verificado</string>
    <string name="message_title_biometric">Biometria</string>
    <string name="message_description_biometric_dialog">Use suas credenciais para entrar no aplicativo.</string>
    <string name="message_enter_login_password_not_save">Digitar senha</string>
    <string name="error_login_fingerprint">Erro ao fazer login com sua biometria</string>
    <string name="empty_password_error">"Você precisar digitar uma senha para continuar "</string>
    <string name="empty_confirm_password_error">"Você precisar confirmar sua senha para continuar "</string>
    <string name="length_password_error">Sua senha precisa conter seis dígitos</string>
    <string name="message_password_not_equals">"Ops! As senhas não são iguais , tente novamente "</string>
    <string name="emailAlreadyExists">O e-mail digitado já foi cadastrado, se não se lembrar da sua senha, use a opção esqueci minha senha.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_confirm_register_password_error">Houve um erro ao registrar sua senha , por favor tente novamente!</string>
    <string name="time_send_email"><![CDATA[Reenviar em <br> <font color="#2196F3">%s segundos</font></br>]]></string>
    <string name="send_email"><![CDATA[<font color="#2196F3">Reenviar e-mail]]></string>
    <string name="fail_send_email">Houve uma falha ao enviar o e-mail, por favor, tente novamente.</string>
    <string name="email_not_validate">Seu e-mail ainda não foi validado, click no link que enviamos para o seu e-mail.</string>
    <string name="authentication_error">Email e/ou senha inválido(s)</string>
    <string name="message_error_register_name">Houve um erro ao tentar finalizar seu cadastro, por favor, tente novamente.</string>
    <string name="error_cnpj_lenght">"Você precisa cadastrar um cnpj válido para continuar "</string>
    <string name="email_to_reset_password">Digite seu <b><font color="#2196F3">e-mail</font></b> para enviarmos as instruções para a <b><font color="#2196F3">troca de senha.</font></b></string>
    <string name="error_send_email">Houve um erro ao enviar o seu e-mail, por favor, cheque sua conexão e tente novamente.</string>
    <string name="message_send_reset_password_email">Sucesso ao enviar o e-mail</string>
</resources>